--- a/resources/assets/sass/main.sass
+++ b/resources/assets/sass/main.sass
@@ -28,11 +28,6 @@ body
 
 //------------------------------------------------------------------------------
 
-p
-    white-space: pre-wrap
-
-//------------------------------------------------------------------------------
-
 hr
     margin: 30px 0
     clear: both
@@ -403,6 +398,7 @@ header
 
 .success-content
     width: 100%
+    padding: 5px
     text-align: center
     margin-top: 20px
     background-color: $green
@@ -453,6 +449,8 @@ header
         filter: opacity(60%)
         &:hover
             filter: opacity(100%)
+    p
+        white-space: pre-wrap
     div
         padding: 0 15px
         position: relative
