--- a/resources/assets/sass/main.sass
+++ b/resources/assets/sass/main.sass
@@ -442,6 +442,8 @@ header
     background-color: #F5F6CE
     border: 1px solid #585858
     display: inline-block
+    p
+        white-space: pre-wrap
 
 .message-content
     font-family: 'Roboto', sans-serif
