--- a/resources/assets/sass/_variables.sass
+++ b/resources/assets/sass/_variables.sass
@@ -10,6 +10,7 @@ $lightyellow: #F5F6CE
 $yellow: #F8F281
 $orange: #F79F81
 $grey: #A4A4A4
+$lightgrey: #D8D8D8
 $pink: #F881F4
 $lightblue: #81DAF5
 $brown: #5E3A26
