--- a/resources/assets/sass/main.sass
+++ b/resources/assets/sass/main.sass
@@ -135,6 +135,11 @@ button,
     &:hover
         background-color: darken($red, 15)
 
+.restore-button
+    background-color: $lightgrey
+    &:hover
+        background-color: darken($lightgrey, 15)
+
 .disabled-button
     background-color: darken($grey, 15)
     &:hover
