--- a/resources/assets/css/main.css
+++ b/resources/assets/css/main.css
@@ -38,7 +38,7 @@ form {
 select {
   width: 40%; }
 
-.records-select {
+.records-select, .stats-select {
   width: 20%;
   margin-right: 10px; }
 
@@ -96,9 +96,9 @@ button,
   font-size: 0.8em;
   border: 1px solid #000000; }
 
-.records-button {
+.records-button, .stats-button {
   background-color: #F881F4; }
-  .records-button:hover {
+  .records-button:hover, .stats-button:hover {
     background-color: #f439ee; }
 
 .edit-button {
@@ -170,7 +170,7 @@ header {
         margin: 0 5px; } }
   header nav a {
     padding: 10px;
-    font-size: 1.2em;
+    font-size: 1em;
     text-decoration: none;
     font-weight: bold;
     color: #000000;
@@ -178,19 +178,21 @@ header {
     display: block;
     border-bottom: 1px solid #000000;
     border-top: 1px solid #FFFFFF;
-    box-shadow: 0 1px 1px 1px #888888; }
+    box-shadow: 0 1px 1px 1px #888888;
+    text-overflow: ellipsis;
+    overflow: hidden;
+    white-space: nowrap; }
     header nav a:hover {
       background-color: #b2b2b2; }
     @media screen and (min-width: 900px) {
       header nav a {
-        width: 130px;
-        padding: 20px 5px;
+        width: 110px;
+        padding: 15px 2px;
         border: 1px solid #000000;
         border-top: none; } }
     @media screen and (min-width: 1200px) {
       header nav a {
-        width: 180px;
-        padding: 20px 15px; } }
+        width: 150px; } }
 
 .events-content {
   width: 95%;
@@ -402,7 +404,7 @@ header {
   .error-content li {
     list-style: none; }
 
-.no-records-content {
+.no-records-content, .no-stats-content {
   width: 100%;
   text-align: center;
   background-color: #F79F81;
